--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
 								<span class="icon-tools"></span>
 							</div>
 							<h3 class="alt-features-title font-alt">Design</h3>
-							A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+							A wonderful serenity has taken possession of my entire soul like these sweet mornings..
 						</div>
 						<!-- Alt features item end -->
 
