--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Marcos Bort - Portfolio</title>
+	<title>Marcos Bort</title>
 	
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -427,9 +427,9 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item marketing photography" >
-						<a href="portfolio-single-1.html">
+						<a href="https://marcosbort.github.io/gym-banner-01" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-4.jpg" alt="">
+								<img src="assets/images/work-4d.jpg" alt="">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Business Card</h3>
@@ -511,7 +511,7 @@
 		</section>
 		<!-- Callout end -->
 
-		<!-- Alt features start -->
+		<!-- Proximamente start -->
 		<section id="alt-features" class="module">
 			<div class="container">
 
@@ -519,7 +519,7 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">Alt features</h2>
+						<h2 class="module-title font-alt">Proximamente</h2>
 						<div class="module-subtitle font-serif">
 							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
 						</div>
