--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<meta name="author" content="">
 	
 	<title>Marcos Bort</title>
-	
+	<!-- Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
@@ -309,8 +312,16 @@
 		</section>
 		<!-- Features end -->
 
+		<div class="large-text align-center">
+			<a href="#works" class="section-scroll"><i class="fa fa-angle-down"></i></a>
+		</div>
+
+		<!-- Parallax Image Start -->
+		<div class="parallax"></div>
+		<!-- Parallax Image End -->
+
 		<!-- Video start -->
-		<section class="module bg-dark-60" data-background="assets/images/section-6.jpg">
+		<!-- <section class="module bg-dark-60 image-separator" data-background="assets/images/1604486-1920.jpg">
 			<div class="container">
 
 				<div class="row">
@@ -319,8 +330,7 @@
 
 						<div class="video-box">
 							<div class="video-box-icon">
-								<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Q4myNm3YZ2A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-								<a href="https://youtu.be/Q4myNm3YZ2A" class="video-pop-up"><span class="icon-video"></span></a> -->
+								
 							</div>
 							<div class="video-title font-alt">
 								motion graphics
@@ -332,10 +342,10 @@
 
 					</div>
 
-				</div><!-- .row -->
+				</div>
 
 			</div>
-		</section>
+		</section> -->
 		<!-- Video end -->
 
 		<!--  -->
