--- a/index.html
+++ b/index.html
@@ -396,14 +396,14 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item illustration photography" >
-						<a href="portfolio-single-1.html">
+						<a href="https://marcosbort.github.io/hover-card-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-3.jpg" alt="">
+								<img src="assets/images/work-3b.jpg" alt="">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Disk Cover</h3>
+								<h3 class="work-title">Card 3D</h3>
 								<div class="work-descr">
-									Illustration
+									Animation Hover
 								</div>
 							</div>
 						</a>
@@ -428,7 +428,7 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item illustration webdesign" >
-						<a href="portfolio-single-1.html">
+						<a href="portfolio-single-1.html" target="_blank">
 							<div class="work-image">
 								<img src="assets/images/work-5.jpg" alt="">
 							</div>
@@ -444,7 +444,7 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item marketing webdesign" >
-						<a href="portfolio-single-1.html">
+						<a href="portfolio-single-1.html" target="_blank">
 							<div class="work-image">
 								<img src="assets/images/work-6.jpg" alt="">
 							</div>
