--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-	<!-- Fonts Oswald -->
-
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/simpletextrotator.css" rel="stylesheet">
@@ -106,7 +104,7 @@
 						</div>
 
 						<div class="module-subtitle font-serif large-text">
-							Estoy comenzando mi carrera en la Industria del Software como Frontend Developer. Disfruto del trabajo en equipo, aprender y participar en proyectos desafiantes. Me gusta poner especial cuidado en cada detalle del desarrollo, como la simplicidad, el rendimiento, el diseño funcional y un enfoque centrado en el usuario.
+							Estoy comenzando mi carrera en la Industria del Software como Frontend Developer. Valoro el trabajo en equipo, aprender y participar en proyectos desafiantes. Me gusta poner especial cuidado en cada detalle del desarrollo, como la simplicidad, el rendimiento, el diseño funcional y un enfoque centrado en el usuario.
 						</div>
 
 					</div>
@@ -428,14 +426,14 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item illustration webdesign" >
-						<a href="portfolio-single-1.html" target="_blank">
+						<a href="https://marcosbort.github.io/abstract-paint-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-5.jpg" alt="">
+								<img src="assets/images/work-5b.jpg" alt="">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Gym Banner Neon</h3>
+								<h3 class="work-title">Abstract Paint 3D</h3>
 								<div class="work-descr">
-									PSD to Animated Code
+									3D hover
 								</div>
 							</div>
 						</a>
@@ -444,14 +442,14 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item marketing webdesign" >
-						<a href="portfolio-single-1.html" target="_blank">
+						<a href="https://marcosbort.github.io/rugby-banner-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-6.jpg" alt="">
+								<img src="assets/images/work-6c.jpg" alt="">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Business Cards in paper clip</h3>
+								<h3 class="work-title">Rugby Banner 3D</h3>
 								<div class="work-descr">
-									Marketing
+									Animation Hover
 								</div>
 							</div>
 						</a>
@@ -501,311 +499,9 @@
 		<!-- Divider -->
 		<hr class="divider-w">
 		<!-- Divider -->
-
-		<!-- Team start -->
-		<section id="team" class="module">
-			<div class="container">
-
-				<div class="row">
-
-					<div class="col-sm-6 col-sm-offset-3">
-
-						<h2 class="module-title font-alt">Meet Our Team</h2>
-						<div class="module-subtitle font-serif">
-							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-				<div class="row">
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp" data-aos="fade-up" data-aos-delay="100">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="assets/images/team-1.jpg" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt">Hi all</h5>
-									<p class="font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a&nbsp;iaculis diam.</p>
-									<div class="team-social">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
-										<a href="#"><i class="fa fa-skype"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Jim Stone</div>
-								<div class="team-role">Art Director</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp" data-aos="fade-up" data-aos-delay="200">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="assets/images/team-2.jpg" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt">Good day</h5>
-									<p class="font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a&nbsp;iaculis diam.</p>
-									<div class="team-social">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
-										<a href="#"><i class="fa fa-skype"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Andy River</div>
-								<div class="team-role">Creative director</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp" data-aos="fade-up" data-aos-delay="300">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="assets/images/team-3.jpg" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt">Hello</h5>
-									<p class="font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a&nbsp;iaculis diam.</p>
-									<div class="team-social">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
-										<a href="#"><i class="fa fa-skype"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Adele Snow</div>
-								<div class="team-role">Account manager</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-					<!-- Team item star -->
-					<div class="col-sm-6 col-md-3 mb-sm-20 wow fadeInUp" data-aos="fade-up" data-aos-delay="400">
-
-						<div class="team-item">
-							<div class="team-image">
-								<img src="assets/images/team-4.jpg" alt="">
-								<div class="team-detail">
-									<h5 class="font-alt">Yes, it's me</h5>
-									<p class="font-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a&nbsp;iaculis diam.</p>
-									<div class="team-social">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
-										<a href="#"><i class="fa fa-skype"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="team-descr font-alt">
-								<div class="team-name">Dylan Woods</div>
-								<div class="team-role">Developer</div>
-							</div>
-						</div>
-
-					</div>
-					<!-- Team item end -->
-
-				</div><!-- .row -->
-
-			</div>
-		</section>
-		<!-- Team end -->
-
 		
 
 		
-		<!-- Testimonials start -->
-		<section class="module bg-dark-60 pt-0 pb-0" data-background="assets/images/section-7.jpg">
-
-			<div class="testimonials-slider pt-140 pb-140">
-				<ul class="slides">
-
-					<!-- Slide 1 start -->
-					<li>
-						<div class="container">
-
-							<div class="row">
-
-								<div class="col-sm-12">
-									<div class="module-icon">
-										<span class="icon-quote"></span>
-									</div>
-								</div>
-
-							</div><!-- .row -->
-
-							<div class="row">
-
-								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine.</blockquote>
-								</div>
-
-							</div><!-- .row -->
-
-							<div class="row">
-
-								<div class="col-sm-4 col-sm-offset-4">
-									<div class="testimonial-author">
-										<div class="testimonial-caption font-alt">
-											<div class="testimonial-title">Jack Woods</div>
-											<div class="testimonial-descr">SomeCompany INC, CEO</div>
-										</div>
-									</div>
-								</div>
-
-							</div><!-- .row -->
-
-						</div><!-- .container -->
-					</li>
-					<!-- Slide 1 end -->
-
-					<!-- Slide 2 start -->
-					<li>
-						<div class="container">
-
-							<div class="row">
-
-								<div class="col-sm-12">
-									<div class="module-icon">
-										<span class="icon-quote"></span>
-									</div>
-								</div>
-
-							</div><!-- .row -->
-
-							<div class="row">
-
-								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now.</blockquote>
-								</div>
-
-							</div><!-- .row -->
-
-							<div class="row">
-
-								<div class="col-sm-4 col-sm-offset-4">
-									<div class="testimonial-author">
-										<div class="testimonial-caption font-alt">
-											<div class="testimonial-title">Jim Stone</div>
-											<div class="testimonial-descr">SomeCompany INC, CEO</div>
-										</div>
-									</div>
-								</div>
-
-							</div><!-- .row -->
-
-						</div><!-- .container -->
-					</li>
-					<!-- Slide 2 end -->
-
-					<!-- Slide 3 start -->
-					<li>
-						<div class="container">
-
-							<div class="row">
-
-								<div class="col-sm-12">
-									<div class="module-icon">
-										<span class="icon-quote"></span>
-									</div>
-								</div>
-
-							</div><!-- .row -->
-
-							<div class="row">
-
-								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text font-alt">I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</blockquote>
-								</div>
-
-							</div><!-- .row -->
-
-							<div class="row">
-
-								<div class="col-sm-4 col-sm-offset-4">
-									<div class="testimonial-author">
-										<div class="testimonial-caption font-alt">
-											<div class="testimonial-title">Adele Snow</div>
-											<div class="testimonial-descr">SomeCompany INC, CEO</div>
-										</div>
-									</div>
-								</div>
-
-							</div><!-- .row -->
-
-						</div><!-- .container -->
-					</li>
-					<!-- Slide 3 end -->
-
-				</ul>
-			</div><!-- .testimonials-slider -->
-
-		</section>
-		<!-- Testimonials end -->
-
-		
-
-		<!-- Subscribe start -->
-		<section class="module-small bg-dark">
-			<div class="container">
-
-				<div class="row">
-
-					<div class="col-sm-6 col-md-6 col-lg-4 col-lg-offset-2">
-
-						<div class="callout-text font-alt">
-							<h3 class="callout-title">Subscribe now</h3>
-							We will not spam your email.
-						</div>
-
-					</div>
-
-					<div class="col-sm-6 col-md-6 col-lg-4">
-
-						<div class="callout-btn-box">
-
-							<form id="subscription-form" role="form">
-								<div class="input-group">
-									<input type="email" id="semail" name="semail" class="form-control" placeholder="Your Email" required="" data-validation-required-message="Please enter your email address.">
-									<span class="input-group-btn">
-										<button type="submit" class="btn btn-g btn-round">Submit</button>
-									</span>
-								</div>
-							</form>
-
-							<!-- Ajax response -->
-							<div id="subscription-response" class="ajax-response"></div>
-
-						</div>
-
-					</div>
-
-				</div><!-- .row -->
-
-			</div>
-		</section>
-		<!-- Subscribe end -->
-
 		<!-- Contact start -->
 		<section id="contact" class="module">
 			<div class="container">
