--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<li><a href="#about" class="section-scroll">About</a></li>
 					<li><a href="#skills" class="section-scroll">Skills</a></li>
 					<li><a href="#works" class="section-scroll">Works</a></li>
-					<li><a href="#team" class="section-scroll">Team</a></li>
-					<li><a href="#news" class="section-scroll">News</a></li>
+					<!-- <li><a href="#team" class="section-scroll">Team</a></li>
+					<li><a href="#news" class="section-scroll">News</a></li> -->
 					<li><a href="#contact" class="section-scroll">Contact</a></li>
 	
 				</ul>
@@ -99,9 +99,9 @@
 
 						<h2 class="module-title font-alt">Acerca de mí</h2>
 
-						<div class="about-photo__box">
+						<!-- <div class="about-photo__box">
 							<img src="./assets/images/foto-portfolio-01.jpg" alt="Marcos Bort" class="about-photo">
-						</div>
+						</div> -->
 
 						<div class="module-subtitle font-serif large-text">
 							Estoy comenzando mi carrera en la Industria del Software como Frontend Developer. Valoro el trabajo en equipo, aprender y participar en proyectos desafiantes. Me gusta poner especial cuidado en cada detalle del desarrollo, como la simplicidad, el rendimiento, el diseño funcional y un enfoque centrado en el usuario.
@@ -141,7 +141,7 @@
 
 						<h2 class="module-title font-alt">Skills</h2>
 						<div class="module-subtitle font-serif">
-							Algunas de las tecnologías que domino.
+							Algunas tecnologías con las que trabajo:
 						</div>
 
 					</div>
