--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 		<hr class="divider-w">
 		<!-- Dividers -->
 
-		<!-- Features start -->
+		<!-- Skills start -->
 		<section id="skills" class="module">
 			<div class="container">
 
@@ -315,7 +315,7 @@
 
 			</div><!-- .container -->
 		</section>
-		<!-- Features end -->
+		<!-- Skills end -->
 
 		<div class="large-text align-center">
 			<a href="#works" class="section-scroll"><i class="fa fa-angle-down"></i></a>
@@ -328,7 +328,7 @@
 
 
 
-		<!-- Portfolio start -->
+		<!-- Works start -->
 		<section id="works" class="module">
 
 			<div class="container">
@@ -426,14 +426,14 @@
 
 					<!-- Portfolio item start -->
 					<li class="work-item illustration webdesign" >
-						<a href="https://marcosbort.github.io/abstract-paint-3d" target="_blank">
+						<a href="#">
 							<div class="work-image">
-								<img src="assets/images/work-5b.jpg" alt="">
+								<img src="assets/images/work-5f.jpg" alt="">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Abstract Paint 3D</h3>
+								<h3 class="work-title">Working</h3>
 								<div class="work-descr">
-									3D hover
+									Advance Parallax
 								</div>
 							</div>
 						</a>
@@ -444,7 +444,7 @@
 					<li class="work-item marketing webdesign" >
 						<a href="https://marcosbort.github.io/rugby-banner-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-6c.jpg" alt="">
+								<img src="assets/images/work-6g.jpg" alt="">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Rugby Banner 3D</h3>
@@ -462,7 +462,7 @@
 			</div><!-- .container -->
 
 		</section>
-		<!-- Portfolio end -->
+		<!-- Works end -->
 
 
 		<!-- Callout start -->
