--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h2 class="module-title font-alt">Get in touch</h2>
+						<h2 class="module-title font-alt">Contactame</h2>
 
 					</div>
 
@@ -622,9 +622,3 @@
     </script>
 </body>
 </html>
-<!-- 
-Notas:
-
-wow fadeInUp
-
- -->
