--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 				<div class="row multi-columns-row">
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3" >
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -165,7 +165,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -178,7 +178,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -191,7 +191,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -204,7 +204,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -217,7 +217,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -230,7 +230,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -243,7 +243,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3">
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -260,7 +260,7 @@
 					</div> -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3" >
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -273,7 +273,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3" >
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -286,7 +286,7 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3" >
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -299,7 +299,8 @@
 					<!-- Features end -->
 
 					<!-- Features start -->
-					<div class="col-sm-6 col-md-3 col-lg-3" >
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+					<!-- <div class="col-sm-6 col-md-3 col-lg-3" > Medida Original -->
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
@@ -365,7 +366,7 @@
 					<li class="work-item psd-to-code illustration webdesign" >
 						<a href="https://marcosbort.github.io/layout-restaurant-01" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-1a.jpg" alt="">
+								<img src="assets/images/work-1a.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">PSD to Responsive Code</h3>
@@ -381,7 +382,7 @@
 					<li class="work-item psd-to-code marketing photography" >
 						<a href="https://marcosbort.github.io/layout_02" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-2c.jpg" alt="">
+								<img src="assets/images/work-2c.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">PSD to Code Full responsive</h3>
@@ -397,7 +398,7 @@
 					<li class="work-item illustration photography" >
 						<a href="https://marcosbort.github.io/hover-card-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-3b.jpg" alt="">
+								<img src="assets/images/work-3c.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Card 3D</h3>
@@ -413,7 +414,7 @@
 					<li class="work-item psd-to-code marketing photography" >
 						<a href="https://marcosbort.github.io/gym-banner-01" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-4d.jpg" alt="">
+								<img src="assets/images/work-4d.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Neon Gym Banner</h3>
@@ -429,7 +430,7 @@
 					<li class="work-item illustration webdesign" >
 						<a href="#">
 							<div class="work-image">
-								<img src="assets/images/work-5f.jpg" alt="">
+								<img src="assets/images/work-5f.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Working</h3>
@@ -445,7 +446,7 @@
 					<li class="work-item marketing webdesign" >
 						<a href="https://marcosbort.github.io/rugby-banner-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-6g.jpg" alt="">
+								<img src="assets/images/work-6g.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Rugby Banner 3D</h3>
