--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 					<li class="work-item psd-to-code parallax-effect" >
 						<a href="https://marcosbort.github.io/rugby-banner-3d" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-6g.jpg" alt="work image">
+								<img src="assets/images/work-6i.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Rugby Banner 3D</h3>
@@ -396,7 +396,7 @@
 					<li class="work-item psd-to-code " >
 						<a href="https://marcosbort.github.io/gym-banner-01" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-4d.jpg" alt="work image">
+								<img src="assets/images/work-4i.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">Neon Gym Banner</h3>
@@ -444,7 +444,7 @@
 					<li class="work-item psd-to-code " >
 						<a href="https://marcosbort.github.io/layout_02" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/work-2c.jpg" alt="work image">
+								<img src="assets/images/work-2i.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
 								<h3 class="work-title">PSD to Code Full responsive</h3>
