--- a/index.html
+++ b/index.html
@@ -52,8 +52,6 @@
 					<li><a href="#about" class="section-scroll">About</a></li>
 					<li><a href="#skills" class="section-scroll">Skills</a></li>
 					<li><a href="#works" class="section-scroll">Works</a></li>
-					<!-- <li><a href="#team" class="section-scroll">Team</a></li>
-					<li><a href="#news" class="section-scroll">News</a></li> -->
 					<li><a href="#contact" class="section-scroll">Contact</a></li>
 	
 				</ul>
@@ -65,7 +63,6 @@
 	<!-- Navigation end -->
 
 	<!-- Home start -->
-	<!-- <section id="home" class="home-section home-parallax home-fade home-full-height bg-dark-30" data-background="assets/images/section-21.jpg"> -->
 	<section id="home" class="home-section home-parallax home-fade home-full-height bg-dark-30">
 
 		<div class="hs-caption">
@@ -77,7 +74,7 @@
 				<div class="hs-title-size-4 font-alt mb-40" data-aos="fade-up" data-aos-delay="300">
 					portfolio
 				</div>
-				<a href="#about" class="section-scroll btn btn-border-w btn-round" data-aos="fade-up" data-aos-delay="100">Learn More</a>
+				<a href="#about" class="section-scroll btn btn-border-w btn-round" data-aos="fade-up" data-aos-delay="100">Leer más</a>
 			</div>
 		</div>
 		<video muted autoplay loop>
@@ -91,7 +88,7 @@
 	<div class="main">
 
 		<!-- About start -->
-		<section id="about" class="module">
+		<section id="about" class="module ">
 			<div class="container">
 
 				<div class="row">
@@ -104,10 +101,15 @@
 							<img src="./assets/images/foto-portfolio-01.jpg" alt="Marcos Bort" class="about-photo">
 						</div> -->
 
+						<!-- <div class="module-subtitle font-serif large-text"> -->
 						<div class="module-subtitle font-serif large-text">
 							Estoy comenzando mi carrera en la Industria del Software como Frontend Developer. Valoro el trabajo en equipo, aprender y participar en proyectos desafiantes. Me gusta poner especial cuidado en cada detalle del desarrollo, como la simplicidad, el rendimiento, el diseño funcional y un enfoque centrado en el usuario.
 						</div>
 
+						<div class="btn-cv" data-aos="fade-up" data-aos-delay="100">
+							<a href="https://marcosbort.github.io/portfolio/assets/cv/cv-marcos-bort.pdf" class="btn btn-b btn-round" target="_blank" >Descargar Currículum</a>
+						</div>
+						
 					</div>
 
 				</div><!-- .row -->
@@ -466,6 +468,136 @@
 		<!-- Works end -->
 
 
+		<!-- Testimonials start -->
+		<section class="module pt-0 pb-0 bg-testimonials" >
+			
+			<div class="testimonials-slider">
+				<ul class="slides">
+
+					<!-- Slide 1 start -->
+					<li>
+						<div class="container">
+
+							<div class="row">
+
+								<div class="col-sm-12">
+									<div class="module-icon">
+										<span class="icon-quote"></span>
+									</div>
+								</div>
+
+							</div><!-- .row -->
+
+							<div class="row">
+
+								<div class="col-sm-8 col-sm-offset-2">
+									<blockquote class="testimonial-text ">Conozco a Marcos, trabajé con él. Algo que puedo decir es que pone pasión por lo que hace. Fue muy bueno contar con él en nuestro equipo.</blockquote>
+								</div>
+
+							</div><!-- .row -->
+
+							<div class="row">
+
+								<div class="col-sm-4 col-sm-offset-4">
+									<div class="testimonial-author">
+										<div class="testimonial-caption font-alt">
+											<div class="testimonial-title">Nicolás Tisko</div>
+											<div class="testimonial-descr">Ex Gerente de Marketing <br> Granix</div>
+										</div>
+									</div>
+								</div>
+
+							</div><!-- .row -->
+
+						</div><!-- .container -->
+					</li>
+					<!-- Slide 1 end -->
+
+					<!-- Slide 2 start -->
+					<li>
+						<div class="container">
+
+							<div class="row">
+
+								<div class="col-sm-12">
+									<div class="module-icon">
+										<span class="icon-quote"></span>
+									</div>
+								</div>
+
+							</div><!-- .row -->
+
+							<div class="row">
+
+								<div class="col-sm-8 col-sm-offset-2">
+									<blockquote class="testimonial-text">Marcos trabajó con nosotros 5 años. <br>Es una excelente persona, disciplinada y muy responsable.</blockquote>
+								</div>
+
+							</div><!-- .row -->
+
+							<div class="row">
+
+								<div class="col-sm-4 col-sm-offset-4">
+									<div class="testimonial-author">
+										<div class="testimonial-caption font-alt">
+											<div class="testimonial-title">Valeria Guasch</div>
+											<div class="testimonial-descr">RR.HH. <br> Centro Hirsch</div>
+										</div>
+									</div>
+								</div>
+
+							</div><!-- .row -->
+
+						</div><!-- .container -->
+					</li>
+					<!-- Slide 2 end -->
+
+					<!-- Slide 3 start -->
+					<li>
+						<div class="container">
+
+							<div class="row">
+
+								<div class="col-sm-12">
+									<div class="module-icon">
+										<span class="icon-quote"></span>
+									</div>
+								</div>
+
+							</div><!-- .row -->
+
+							<div class="row">
+
+								<div class="col-sm-8 col-sm-offset-2">
+									<blockquote class="testimonial-text">Con Marcos hicimos grandes proyectos. Lo conocí porque fue alumno mío. Después de eso, siempre lo tuve en cuenta como profesional. Es bueno trabajar con él.</blockquote>
+								</div>
+
+							</div><!-- .row -->
+
+							<div class="row">
+
+								<div class="col-sm-4 col-sm-offset-4">
+									<div class="testimonial-author">
+										<div class="testimonial-caption font-alt">
+											<div class="testimonial-title">Eduardo Villar</div>
+											<div class="testimonial-descr">Docente y Productor <br>UNGS</div>
+										</div>
+									</div>
+								</div>
+
+							</div><!-- .row -->
+
+						</div><!-- .container -->
+					</li>
+					<!-- Slide 3 end -->
+
+				</ul>
+			</div><!-- .testimonials-slider -->
+
+		</section>
+		<!-- Testimonials end -->
+
+
 		<!-- Callout start -->
 		<section class="module-small bg-dark">
 			<div class="container">
@@ -495,10 +627,10 @@
 		</section>
 		<!-- Callout end -->
 
-		
+	
 
 		<!-- Divider -->
-		<hr class="divider-w">
+		<!-- <hr class="divider-w"> -->
 		<!-- Divider -->
 		
 
