--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<div class="main">
 
 		<!-- About start -->
-		<section id="about" class="module ">
+		<section id="about" class="module about">
 			<div class="container">
 
 				<div class="row">
