--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
 					</div>
 					<!-- Features end -->
 
+					<!-- Features start -->
+					<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
+							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
+								<img class="icon-tech" src="./assets/images/logos/npm.png" alt="bash logo">
+							</div>
+							<h3 class="features-title font-alt">NPM</h3>
+						</div>
+
+					</div>
+					<!-- Features end -->
+
 					<!-- <div class="module-subtitle font-serif">
 						Herramientas de diseño.
 					</div> -->
