--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
-								<img class="icon-tech" src="./assets/images/logos/react.png" alt="html 5 logo">
+								<img class="icon-tech" src="./assets/images/logos/node.js.png" alt="node.js logo">
 							</div>
-							<h3 class="features-title font-alt">React Js</h3>
+							<h3 class="features-title font-alt">node.js</h3>
 						</div>
 
 					</div>
@@ -210,9 +210,9 @@
 
 						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
 							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
-								<img class="icon-tech" src="./assets/images/logos/node.js.png" alt="node.js logo">
+								<img class="icon-tech" src="./assets/images/logos/react.png" alt="html 5 logo">
 							</div>
-							<h3 class="features-title font-alt">node.js</h3>
+							<h3 class="features-title font-alt">React Js</h3>
 						</div>
 
 					</div>
@@ -483,9 +483,24 @@
 						</a>
 					</li>
 					<!-- Portfolio item end -->
-					
+
+					<!-- WEATHER Portfolio item start -->
+					<li class="work-item react" >
+						<a href="https://mar-weather-react-app.netlify.app/" target="_blank">
+							<div class="work-image">
+								<img src="assets/images/weather-02.jpg" alt="work image">
+							</div>
+							<div class="work-caption font-alt">
+								<h3 class="work-title">Weather App in React</h3>
+								<div class="work-descr">
+								</div>
+							</div>
+						</a>
+					</li>
+					<!-- Portfolio item end -->
+
 					<!-- RESPONSIVE-LAYOUT Portfolio item start -->
-					<li class="work-item psd-to-code " >
+					<!-- <li class="work-item psd-to-code " >
 						<a href="https://marcosbort.github.io/layout_02" target="_blank">
 							<div class="work-image">
 								<img src="assets/images/work-2i.jpg" alt="work image">
@@ -497,18 +512,19 @@
 								</div>
 							</div>
 						</a>
-					</li>
+					</li> -->
 					<!-- Portfolio item end -->
 					
-					<!-- WEATHER Portfolio item start -->
-					<li class="work-item react" >
-						<a href="https://mar-weather-react-app.netlify.app/" target="_blank">
+					<!-- CARRITO VANILLA JS Portfolio item start -->
+					<li class="work-item design-and-code " >
+						<a href="https://marcosbort.github.io/carrito-vanilla-js" target="_blank">
 							<div class="work-image">
-								<img src="assets/images/weather-02.jpg" alt="work image">
+								<img src="assets/images/carrito-vanilla-js.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Weather App in React</h3>
+								<h3 class="work-title">Carrito de compras</h3>
 								<div class="work-descr">
+									Vanilla Js
 								</div>
 							</div>
 						</a>
