--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 								<img src="assets/images/carrito-vanilla-js.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Carrito de compras</h3>
+								<h3 class="work-title">Carrito de compras - Dinámico (JSON)</h3>
 								<div class="work-descr">
 									Vanilla Js
 								</div>
