--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text ">Conozco a Marcos, trabajé con él. Algo que puedo decir es que pone pasión por lo que hace. Fue muy bueno contar con él en nuestro equipo.</blockquote> <br>
+									<blockquote class="testimonial-text ">Conozco a Marcos, trabajé con él. Algo que puedo decir es que pone pasión por lo que hace. Fue muy bueno contar con él en nuestro equipo.</blockquote>
 								</div>
 
 							</div><!-- .row -->
@@ -625,7 +625,7 @@
 							<div class="row">
 
 								<div class="col-sm-8 col-sm-offset-2">
-									<blockquote class="testimonial-text">Marcos trabajó con nosotros 5 años. <br>Es una excelente persona, disciplinada y muy responsable.</blockquote> <br>
+									<blockquote class="testimonial-text">Marcos trabajó con nosotros 5 años. <br>Es una excelente persona, disciplinada y muy responsable.</blockquote>
 								</div>
 
 							</div><!-- .row -->
