--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
           <ul>
             <a href="https://github.com/marcosbort/sound-site" target="black"><span class="st-point">● </span>Sito Sound en React</a>
             <a href="https://github.com/marcosbort/react-weather-app" target="black"><span class="st-point">● </span>Weather App en React</a>
-            <a href="https://github.com/marcosbort/carrito-vanilla-js" target="black"><span class="st-point">● </span>Carrito de Compras en Vanilla Js</a>
+            <a href="https://github.com/marcosbort/carrito-vanilla-js" target="black"><span class="st-point">● </span>Carrito de Compras en Vanilla</a>
             <a href="https://github.com/marcosbort/react-app-to-do-list" target="black"><span class="st-point">● </span>Todo list en React</a>
             <a href="https://github.com/marcosbort/rugby-banner-3d" target="black"><span class="st-point">● </span>Rugby Banner 3D</a>
             <a href="https://github.com/marcosbort/gym-banner-01" target="black"><span class="st-point">● </span>Neon Gym Banner</a>
@@ -691,7 +691,7 @@
 			<div class="container">
 	
       <div class="col-sm-6 footer">
-        <p class="copyright font-alt">© 2020 <a href="index.html">Marcos Bort</a></p>
+        <p class="copyright font-alt">© 2021 <a href="index.html">Marcos Bort</a></p>
       </div>
 	
 			</div>
