actualizacion de cv

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 								<img src="assets/images/weather-2.jpg" alt="work image">
 							</div>
 							<div class="work-caption font-alt">
-								<h3 class="work-title">Weather App in React</h3>
+								<h3 class="work-title">Weather App en React</h3>
 								<div class="work-descr">
 								</div>
 							</div>
