actualizacion de skills

--- a/index.html
+++ b/index.html
@@ -261,6 +261,19 @@
 					</div>
 					<!-- Features end -->
 
+          <!-- Features start -->
+					<div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
+
+						<div class="features-item" data-aos="fade-up" data-aos-delay="100">
+							<div class="features-icon" data-aos="fade-up" data-aos-delay="100">
+								<img class="icon-tech" src="./assets/images/logos/ant-design.png" alt="bootstrap logo">
+							</div>
+							<h3 class="features-title font-alt">Ant-Design</h3>
+						</div>
+
+					</div>
+					<!-- Features end -->
+
 					<!-- Features start -->
 					<div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
 
