actualización de foto about

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <!-- <div class="section-line"></div> -->
 						<div class="about-photo__box">
-							<img src="./assets/images/foto-portfolio-01.jpg" alt="Marcos Bort" class="about-photo">
+							<img src="./assets/images/foto-portfolio-02.png" alt="Marcos Bort" class="about-photo">
 						</div>
 
 						<!-- <div class="module-subtitle font-serif large-text"> -->
