--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
             <!-- WEATHER Portfolio item start -->
             <li class="work-item react">
               <a
-                href="https://mar-weather-react-app.netlify.app/"
+                href="https://mb-weather-app.netlify.app/"
                 target="_blank"
               >
                 <div class="work-image">
