--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
     <title>Marcos Bort</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Questrial&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="icon"
-      type="favicon/x-con"
-      href="https://marcosbort.github.io/favicon-mb/favicon.png"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet"/>
+    <link rel="icon" type="favicon/x-con" href="https://marcosbort.github.io/favicon-mb/favicon.png"/>
     <!-- CSS -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/simpletextrotator.css" rel="stylesheet" />
@@ -561,16 +554,6 @@
 						</div> -->
               <!-- <div class="section-line"></div> -->
             </div>
-
-            <!-- <div class="col-sm-12">
-						
-						<ul id="filters" class="filter font-alt title-works hidden-xs">
-							<li><a href="#" data-filter="*" class="current wow fadeInUp title-works">All</a></li>
-							<li><a href="#" data-filter=".react" class="title-works">React</a></li>
-							<li><a href="#" data-filter=".psd-to-code" class="title-works">Psd-to-Code</a></li>
-						</ul>
-						
-					</div> -->
           </div>
           <!-- .row -->
 
@@ -609,7 +592,7 @@
 
             <!-- CARRITO VANILLA JS Portfolio item start -->
             <li class="work-item">
-              <a
+              <a 
                 href="https://marcosbort.github.io/carrito-vanilla-js"
                 target="_blank"
               >
@@ -663,7 +646,7 @@
 
             <!-- GYM-BANNER Portfolio item start -->
             <li class="work-item psd-to-code">
-              <a
+              <a 
                 href="https://marcosbort.github.io/gym-banner-01"
                 target="_blank"
               >
@@ -686,35 +669,12 @@
               <img src="./assets/images/github.png" alt="" />
             </div>
             <ul>
-              <a href="https://github.com/marcosbort/sound-site" target="black"
-                ><span class="st-point">● </span>Sito Sound en React</a
-              >
-              <a
-                href="https://github.com/marcosbort/react-weather-app"
-                target="black"
-                ><span class="st-point">● </span>Weather App en React</a
-              >
-              <a
-                href="https://github.com/marcosbort/carrito-vanilla-js"
-                target="black"
-                ><span class="st-point">● </span>Carrito de Compras en
-                Vanilla</a
-              >
-              <a
-                href="https://github.com/marcosbort/react-app-to-do-list"
-                target="black"
-                ><span class="st-point">● </span>To do list en React</a
-              >
-              <a
-                href="https://github.com/marcosbort/rugby-banner-3d"
-                target="black"
-                ><span class="st-point">● </span>Rugby Banner 3D</a
-              >
-              <a
-                href="https://github.com/marcosbort/gym-banner-01"
-                target="black"
-                ><span class="st-point">● </span>Neon Gym Banner</a
-              >
+              <a href="https://github.com/marcosbort/sound-site" target="black"><span class="st-point">● </span>Sito Sound en React</a>
+              <a href="https://github.com/marcosbort/react-weather-app" target="black"><span class="st-point">● </span>Weather App en React</a>
+              <a href="https://github.com/marcosbort/carrito-vanilla-js" target="black"><span class="st-point">● </span>Carrito de Compras en Vanilla</a>
+              <a href="https://github.com/marcosbort/react-app-to-do-list" target="black"><span class="st-point">● </span>To do list en React</a>
+              <a href="https://github.com/marcosbort/rugby-banner-3d" target="black" ><span class="st-point">● </span>Rugby Banner 3D</a>
+              <a href="https://github.com/marcosbort/gym-banner-01" target="black" ><span class="st-point">● </span>Neon Gym Banner</a>
             </ul>
           </div>
         </div>
