--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
                 desafiantes. Me gusta poner especial cuidado en cada detalle del
                 desarrollo, como la simplicidad, el rendimiento, el diseño
                 funcional y un enfoque centrado en el usuario.
+
+                <!-- <br>
+                Contacto:
+                <br>
+                marcosbort+2@gmail.com
+                <br>
+                (+54 9 11-2884-9824) -->
               </div>
 
             </div>
@@ -825,34 +832,40 @@
           </div>
 
           <div class="contact-box">
-            <div class="linkedin-logo">
+            <!-- <div class="linkedin-logo">
               <a href="https://www.linkedin.com/in/marcosbort" target="blank"
                 ><img src="./assets/images/linkedin.png" alt="linkedin"
               /></a>
-            </div>
+            </div> -->
 
-            <div class="email-logo">
+            <!-- <div class="email-logo">
               <a href="mailto:marcosbort@gmail.com" target="blank"
                 ><img src="./assets/images/email.png" alt="email"
               /></a>
+            </div> -->
+
+            <div class="datos-contacto">
+              e-mail: marcosbort+2@gmail.com
+              <br>
+              Tel: (+54 9) 11-2884-9824
             </div>
 
-            <div class="github-logo">
+            <!-- <div class="github-logo">
               <a href="https://github.com/marcosbort" target="blank"
                 ><img src="./assets/images/github.png" alt="github"
               /></a>
-            </div>
+            </div> -->
           </div>
         </div>
 
-        <div class="box-btn-cv">
+        <!-- <div class="box-btn-cv">
           <a
             href="https://marcosbort.github.io/portfolio/assets/cv/cv-marcos-bort.pdf"
             class="btn btn-mod btn-circle btn-medium btn-cv"
             target="_blank"
             >Descargar CV</a
           >
-        </div>
+        </div> -->
       </section>
       <!-- CONTACTO ESTATICO FIN-->
 
