--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
               </h2>
 
               <!-- <div class="section-line"></div> -->
-              <div class="about-photo__box">
+              <!-- <div class="about-photo__box">
                 <img
                   src="./assets/images/foto-portfolio-02.png"
                   alt="Marcos Bort"
                   class="about-photo"
                 />
-              </div>
+              </div> -->
 
               <div class="module-subtitle font-serif large-text">
                 Estoy comenzando mi carrera en la Industria del Software como
@@ -113,13 +113,6 @@
                 desafiantes. Me gusta poner especial cuidado en cada detalle del
                 desarrollo, como la simplicidad, el rendimiento, el diseño
                 funcional y un enfoque centrado en el usuario.
-
-                <!-- <br>
-                Contacto:
-                <br>
-                marcosbort+2@gmail.com
-                <br>
-                (+54 9 11-2884-9824) -->
               </div>
 
             </div>
