--- a/index.html
+++ b/index.html
@@ -663,9 +663,8 @@
           </ul>
           <!-- Portfolio list end -->
 
-          <div class="works-code">
+          <!-- <div class="works-code">
             <div class="title-box">
-              <!-- <h3>Ver código en Github</h3> -->
               <img src="./assets/images/github.png" alt="" />
             </div>
             <ul>
@@ -676,7 +675,7 @@
               <a href="https://github.com/marcosbort/rugby-banner-3d" target="black" ><span class="st-point">● </span>Rugby Banner 3D</a>
               <a href="https://github.com/marcosbort/gym-banner-01" target="black" ><span class="st-point">● </span>Neon Gym Banner</a>
             </ul>
-          </div>
+          </div> -->
         </div>
         <!-- .container -->
       </section>
